backup/masterpackage-retrieve/unpackaged/unpackaged/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Conversions</fullName>
        <description>Support process for &apos;Debit Order Switch&apos;</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Confirmed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CON_Rag_Status__c</fullName>
        <formula>IF(
    CD_StrackStatus__c = &quot;Red&quot;,
    &quot;🔴 Red&quot;,
    IF(
        CD_StrackStatus__c = &quot;Amber&quot;,
        &quot;🟠 Amber&quot;,
        IF(
            CD_StrackStatus__c = &quot;Green&quot;,
            &quot;🟢 Green&quot;,
            &quot;&quot;
        )
    )
)</formula>
        <label>Rag Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capitec_Category__c</fullName>
        <description>Capitec Case Category</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Card</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Connect</fullName>
                </value>
                <value>
                    <fullName>Home Loans</fullName>
                </value>
                <value>
                    <fullName>Vehicle Finance</fullName>
                </value>
                <value>
                    <fullName>Forensics Investigation</fullName>
                </value>
                <value>
                    <fullName>WS Debit Order Switch Request</fullName>
                </value>
                <value>
                    <fullName>FD Debit Order Switch</fullName>
                </value>
                <value>
                    <fullName>Switching Refund Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Account Terminated</fullName>
                </value>
                <value>
                    <fullName>Allocated</fullName>
                </value>
                <value>
                    <fullName>Allocated Assessing</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Awaiting Client Feedback</fullName>
                </value>
                <value>
                    <fullName>Awaiting Client Response</fullName>
                </value>
                <value>
                    <fullName>Awaiting External Feedback</fullName>
                </value>
                <value>
                    <fullName>Awaiting for Internal Department Feedback</fullName>
                </value>
                <value>
                    <fullName>Awaiting Insurer Feedback</fullName>
                </value>
                <value>
                    <fullName>Awaiting Medical Feedback</fullName>
                </value>
                <value>
                    <fullName>Awaiting OCI Insurer</fullName>
                </value>
                <value>
                    <fullName>Awaiting Sign Off: Adverse Media</fullName>
                </value>
                <value>
                    <fullName>Awaiting Sign Off: Reported</fullName>
                </value>
                <value>
                    <fullName>Awaiting Sign Off: Review Complete</fullName>
                </value>
                <value>
                    <fullName>Awaiting Sign Off: Review Not Required</fullName>
                </value>
                <value>
                    <fullName>Claims Forum</fullName>
                </value>
                <value>
                    <fullName>Claims Management</fullName>
                </value>
                <value>
                    <fullName>Contact Client</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Declined (Closed)</fullName>
                </value>
                <value>
                    <fullName>Documents not received</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>EDD Requirements Failed</fullName>
                </value>
                <value>
                    <fullName>Escalated - Mandate approval</fullName>
                </value>
                <value>
                    <fullName>Evaluating Client Response</fullName>
                </value>
                <value>
                    <fullName>Finalised</fullName>
                </value>
                <value>
                    <fullName>Final Termination Notice Sent</fullName>
                </value>
                <value>
                    <fullName>Guardrisk Assessing</fullName>
                </value>
                <value>
                    <fullName>HB 48hrs SMS notice</fullName>
                    <label>Hard Block 48hrs SMS notice</label>
                </value>
                <value>
                    <fullName>Hard Block Applied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Central_Conversion_Team_Leader_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CM_Complexity__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CON_Rag_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Conversions</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Central Conversions Team Leader</label>
        <sharedTo>
            <role>Conversions</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_Conversions_Agent</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CM_Complexity__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CON_Rag_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Owner_Name__c</field>
            <operation>equals</operation>
            <value>Central Conversions</value>
        </filters>
        <label>Central Conversions - Agent</label>
        <sharedTo>
            <role>Conversions</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Conversions</fullName>
        <active>true</active>
        <businessProcess>Conversions</businessProcess>
        <description>Record type for Debit Order Switch</description>
        <label>Conversions</label>
    </recordTypes>
    <validationRules>
        <fullName>Conversion_Case_Closed</fullName>
        <active>true</active>
        <description>Prevents the update of a case once it has been closed</description>
        <errorConditionFormula>AND(
				$Setup.Bypass_Configurations__c.Bypass_Validation_Rules__c = false,
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
    RecordType.Name = &quot;Conversions&quot;,
    NOT(ISNEW()),
    ISPICKVAL(PRIORVALUE(Status), &quot;Closed&quot;)
)</errorConditionFormula>
        <errorMessage>A case cannot be updated once it has been closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Conversions_Block_Change_Status_Backward</fullName>
        <active>true</active>
        <description>This rule prevent the status of conversion cases from changing backwards</description>
        <errorConditionFormula>AND(
    NOT($Setup.Bypass_Configurations__c.Bypass_Validation_Rules__c),
	   $RecordType.Name = &quot;Conversions&quot;,
    ISCHANGED(Status),
    CASE(
        TEXT(PRIORVALUE(Status)),
        &quot;New&quot;, 1,
        &quot;In Progress&quot;, 2,
        &quot;Submitted&quot;, 3,
        &quot;Confirmed&quot;, 4,
        &quot;Closed&quot;, 5,
        0
    )
    &gt;
    CASE(
        TEXT(Status),
        &quot;New&quot;, 1,
        &quot;In Progress&quot;, 2,
        &quot;Submitted&quot;, 3,
        &quot;Confirmed&quot;, 4,
        &quot;Closed&quot;, 5,
        0
    )
)</errorConditionFormula>
        <errorMessage>You cannot move this Case back to a previous stage. Completed stages are locked to maintain process integrity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Conversions_Cannot_Close_Case</fullName>
        <active>true</active>
        <description>Prevents a Team Leader or Manager from closing a Conversions Case.</description>
        <errorConditionFormula>AND(
				$Setup.Bypass_Configurations__c.Bypass_Validation_Rules__c = false,
    ISPICKVAL(Status, &quot;Closed&quot;),
    OR(
        $Profile.Name = &quot;Conversions Team Leader&quot;,
        $Profile.Name = &quot;Conversions Manager&quot;
    ),
    $RecordType.Name = &quot;Conversions&quot;
)</errorConditionFormula>
        <errorMessage>Only the Assigned Agent can close this case</errorMessage>
    </validationRules>
</CustomObject>